--- a/lib/caixa_azul_web/templates/layout/_user_menu.html.heex
+++ b/lib/caixa_azul_web/templates/layout/_user_menu.html.heex
@@ -1,7 +1,7 @@
 <%= if @current_user do %>
-  <%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %>
-  <%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %>
+  <%= link "Configurações", to: Routes.user_settings_path(@conn, :edit) %>
+  <%= link "Sair", to: Routes.user_session_path(@conn, :delete), method: :delete %>
 <% else %>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %>
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
+  <%= link "Registrar", to: Routes.user_registration_path(@conn, :new) %>
+  <%= link "Entrar", to: Routes.user_session_path(@conn, :new) %>
 <% end %>
