--- a/lib/caixa_azul_web/live/page_live.html.heex
+++ b/lib/caixa_azul_web/live/page_live.html.heex
@@ -1,15 +1,19 @@
 <section class="text-center">
-  <h1 class="mb-4 text-3xl font-medium text-base-content text-opacity-80 title-font sm:text-4xl"><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
+  <h1 class="mb-4 text-3xl font-medium text-base-content text-opacity-80 title-font sm:text-4xl">
+    <%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p class="mb-8 leading-relaxed">Peace of mind from prototype to production</p>
 
   <form phx-change="suggest" phx-submit="search">
-    <input type="text" name="q" value={@query} placeholder="Live dependency search" list="results" autocomplete="off" class="w-64 px-3 py-1 text-base border border-gray-300 rounded outline-none text-base-content text-opacity-80 bg-base-200 bg-opacity-50 focus:ring-2 focus:ring-blue-200 focus:bg-transparent focus:border-blue-500 leading-8 transition-colors duration-200 ease-in-out"/>
+    <input type="text" name="q" value={@query} placeholder="Live dependency search" list="results" autocomplete="off"
+      class="w-64 px-3 py-1 text-base border border-gray-300 rounded outline-none text-base-content text-opacity-80 bg-base-200 bg-opacity-50 focus:ring-2 focus:ring-blue-200 focus:bg-transparent focus:border-blue-500 leading-8 transition-colors duration-200 ease-in-out" />
     <datalist id="results">
       <%= for {app, _vsn} <- @results do %>
-        <option value={app}><%= app %></option>
+      <option value={app}><%= app %></option>
       <% end %>
     </datalist>
-    <button type="submit" phx-disable-with="Searching..." class="inline-flex px-6 py-2 mt-4 text-lg text-white bg-blue-500 border-0 rounded sm:mt-0 focus:outline-none hover:bg-blue-600" >Go to Hexdocs</button>
+    <button type="submit" phx-disable-with="Searching..."
+      class="inline-flex px-6 py-2 mt-4 text-lg text-white bg-blue-500 border-0 rounded sm:mt-0 focus:outline-none hover:bg-blue-600">Go
+      to Hexdocs</button>
   </form>
 </section>
 
