--- a/lib/caixa_azul_web/templates/user_settings/edit.html.heex
+++ b/lib/caixa_azul_web/templates/user_settings/edit.html.heex
@@ -4,9 +4,9 @@
 
 <.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
   <%= if @email_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
+  <div class="alert alert-danger">
+    <p>Oops, something went wrong! Please check the errors below.</p>
+  </div>
   <% end %>
 
   <%= hidden_input f, :action, name: "action", value: "update_email" %>
@@ -31,11 +31,12 @@
 
 <h3 class="mt-12 font-semibold text-gray-700 dark:text-white">Change password</h3>
 
-<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password" class="mb-12">
+<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password"
+  class="mb-12">
   <%= if @password_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
+  <div class="alert alert-danger">
+    <p>Oops, something went wrong! Please check the errors below.</p>
+  </div>
   <% end %>
 
   <%= hidden_input f, :action, name: "action", value: "update_password" %>
