--- a/lib/caixa_azul_web/templates/layout/live.html.heex
+++ b/lib/caixa_azul_web/templates/layout/live.html.heex
@@ -1,7 +1,17 @@
 <main role="main" class="container mx-auto max-w-4xl px-4 lg:px-0">
-  <p class="alert alert-info" role="alert" phx-click="lv:clear-flash" phx-value-key="info">
-    <%= live_flash(@flash, :info) %></p>
-  <p class="alert alert-danger" role="alert" phx-click="lv:clear-flash" phx-value-key="error">
-    <%= live_flash(@flash, :error) %></p>
+  <%
+    info = live_flash(@flash, :info)
+    error = live_flash(@flash, :error)
+  %>
+  <%= if info do %>
+    <p class="alert alert-info alert-left toast" role="alert" phx-click="lv:clear-flash" phx-value-key="info">
+      <%= info %>
+    </p>
+  <% end %>
+  <%= if error do %>
+    <p class="alert alert-danger alert-left toast" role="alert" phx-click="lv:clear-flash" phx-value-key="error">
+      <%= error %>
+    </p>
+  <% end %>
   <%= @inner_content %>
 </main>
