feat: added breadcrumbs

--- a/lib/caixa_azul_web/templates/layout/dashboard.html.heex
+++ b/lib/caixa_azul_web/templates/layout/dashboard.html.heex
@@ -57,6 +57,9 @@
           <li>
             <%= link "Dashboard", to: Routes.dashboard_path(@conn, :index), class: "" %>
           </li>
+          <li>
+            <%= link "Serviços", to: Routes.services_path(@conn, :index), class: "" %>
+          </li>
         </ul>
       </div>
     </div>
